--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ngxs/devtools-plugin": "^3.7.2",
+    "@ngxs/logger-plugin": "^3.7.2",
+    "@ngxs/store": "^3.7.2",
     "bootstrap": "^3.4.1",
+    "primeicons": "^5.0.0",
+    "primeng": "^13.0.0-rc.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
